Alteração Program.cs

--- a/WebApi_Cadastro/appsettings.json
+++ b/WebApi_Cadastro/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaltConnetcions": "Data source=LAENDERWORK\\SQLSERVER2022;database=UsarioWebApi;Trusted_connection=true; Encrypt=false; TrustServerCertificate=True "
+    "DefaltConnetcions": "Data source=LAENDERWORK\\SQLSERVER2022;database=Hexagon;Trusted_connection=true; Encrypt=false; TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
